--- a/src/MudBlazor/Styles/components/_iconbutton.scss
+++ b/src/MudBlazor/Styles/components/_iconbutton.scss
@@ -48,10 +48,14 @@
 
 .mud-icon-button-edge-start {
     margin-left: -12px;
+    margin-inline-start: -12px;
+    margin-inline-end: unset;
 }
 
 .mud-icon-button-edge-end {
     margin-right: -12px;
+    margin-inline-end: -12px;
+    margin-inline-start: unset;
 }
 
 .mud-icon-button-size-small {
@@ -60,9 +64,13 @@
 
     &.mud-icon-button-edge-start {
         margin-left: -3px;
+        margin-inline-start: -3px;
+        margin-inline-end: unset;
     }
 
     &.mud-icon-button-edge-end {
         margin-right: -3px;
+        margin-inline-end: -3px;
+        margin-inline-start: unset;
     }
 }
