--- a/src/MudBlazor/Styles/components/_table.scss
+++ b/src/MudBlazor/Styles/components/_table.scss
@@ -1,4 +1,4 @@
-﻿@import '../abstracts/variables';
+@import '../abstracts/variables';
 
 .mud-table {
     color: var(--mud-palette-text-primary);
@@ -90,6 +90,8 @@
 .mud-table-toolbar {
     padding-left: 16px;
     padding-right: 8px;
+    padding-inline-start: 16px;
+    padding-inline-end: 8px;
 }
 
 
@@ -98,7 +100,7 @@
     display: table-cell;
     padding: 16px;
     font-size: 0.875rem;
-    text-align: left;
+    text-align: start;
     font-weight: 400;
     line-height: 1.43;
     border-bottom: 1px solid var(--mud-palette-table-lines);
@@ -120,10 +122,14 @@
     & * .mud-table-row {
         & .mud-table-cell {
             padding: 6px 24px 6px 16px;
+            padding-inline-start: 16px;
+            padding-inline-end: 24px;
         }
 
         & .mud-table-cell:last-child {
             padding-right: 16px;
+            padding-inline-end: 16px;
+            padding-inline-start: unset;
         }
     }
 }
@@ -286,6 +292,8 @@
     border-top: 1px solid var(--mud-palette-table-lines);
     height: 52px;
     padding-right: 2px;
+    padding-inline-end: 2px;
+    padding-inline-start: unset;
 }
 
 .mud-table-pagination-spacer {
@@ -323,6 +331,8 @@
 .mud-table-pagination-actions {
     flex-shrink: 0;
     margin-left: 20px;
+    margin-inline-start: 20px;
+    margin-inline-end: unset;
 }
 
 .mud-table-smalldevices-sortselect {
@@ -359,7 +369,7 @@
             align-items: center;
             border: none;
             padding: 14px 16px;
-            text-align: left !important;
+            text-align: start !important;
         }
 
         &.mud-table-dense {
@@ -372,6 +382,8 @@
             content: attr(data-label);
             font-weight: 500;
             padding-right: 16px;
+            padding-inline-end: 16px;
+            padding-inline-start: unset;
         }
 
         &.mud-table-small-alignright .mud-table-cell:before {
@@ -403,6 +415,7 @@
 
             .mud-select ~ .mud-table-pagination-caption {
                 margin-left: auto;
+                margin-inline-start: auto;
             }
         }
     }
@@ -415,10 +428,13 @@
             .mud-select {
                 margin-left: auto;
                 margin-right: -14px;
+                margin-inline-start: auto;
+                margin-inline-end: -14px;
             }
 
             .mud-select ~ .mud-table-pagination-caption {
                 margin-left: unset !important;
+                margin-inline-start: unset !important;
             }
         }
     }
@@ -431,11 +447,15 @@
                 flex-wrap: wrap;
                 padding-top: 16px;
                 padding-right: 16px;
+                padding-inline-end: 16px;
+                padding-inline-start: unset;
                 min-height: 100px;
 
                 .mud-table-pagination-actions {
                     margin-left: auto;
                     margin-right: -14px;
+                    margin-inline-start: auto;
+                    margin-inline-end: -14px;
                 }
             }
         }
